firstWPINEW For the previously chosen pre commit